src/plugins/clangcodemodel/clangdclient.h
@@ -148,7 +148,7 @@ private:
     bool fileBelongsToProject(const Utils::FilePath &filePath) const override;
     QList<Utils::Text::Range> additionalDocumentHighlights(
         TextEditor::TextEditorWidget *editorWidget, const QTextCursor &cursor) override;
-
+    bool shouldSendDidSave(const TextEditor::TextDocument *doc) const override;
 
     class Private;
     class VirtualFunctionAssistProcessor;
